--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,13 +2,20 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.projectku">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme"
+        android:usesCleartextTraffic="true">
+        <activity
+            android:name=".SettingActivity"
+            android:label="Setting"
+            android:theme="@style/AppTheme"></activity>
         <activity
             android:name=".Spash"
             android:label="@string/app_name"
@@ -31,7 +38,6 @@
             android:name=".MainActivity"
             android:label="Home Screen"
             android:theme="@style/AppTheme.NoAction" />
-
         <activity
             android:name=".MaPelActivity"
             android:label="Mata Pelajaran"
@@ -49,14 +55,9 @@
             android:label="Account"
             android:theme="@style/AppTheme" />
         <activity
-            android:name=".SettingActivity"
-            android:label="Setting"
-            android:theme="@style/AppTheme" />
-        <activity
             android:name=".NilaiActivity"
             android:label="Nilai"
             android:theme="@style/AppTheme" />
     </application>
-
 
 </manifest>
