--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,4 +38,7 @@ dependencies {
 
 //    volley
     implementation 'com.android.volley:volley:1.1.1'
+
+//    picasso
+    implementation 'com.squareup.picasso:picasso:2.71828'
 }
