--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,9 +13,13 @@
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
         <activity
+            android:name=".AccountActivity"
+            android:label="Account"
+            android:theme="@style/AppTheme"></activity>
+        <activity
             android:name=".SettingActivity"
             android:label="Setting"
-            android:theme="@style/AppTheme"></activity>
+            android:theme="@style/AppTheme" />
         <activity
             android:name=".Spash"
             android:label="@string/app_name"
@@ -42,17 +46,13 @@
             android:name=".MaPelActivity"
             android:label="Mata Pelajaran"
             android:theme="@style/AppTheme" />
-        <activity
-            android:name=".MateriActivity"
-            android:label="Materi"
-            android:theme="@style/AppTheme" />
+<!--        <activity-->
+<!--            android:name=".MateriActivity"-->
+<!--            android:label="Materi"-->
+<!--            android:theme="@style/AppTheme" />-->
         <activity
             android:name=".KelasActivity"
             android:label="Kelas"
-            android:theme="@style/AppTheme" />
-        <activity
-            android:name=".AccountActivity"
-            android:label="Account"
             android:theme="@style/AppTheme" />
         <activity
             android:name=".NilaiActivity"
